--- a/src/app/mainscreen/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/searchbar/searchbar.component.scss
@@ -1,8 +1,7 @@
-#header-searchfield-container {
-
+#searchfield-container {
     position: relative;
 
-    #header-searchfield {
+    #searchfield {
         flex-grow: 1;
         width: calc(100% - 24px);
         border-radius: 42px;
@@ -11,35 +10,61 @@
         padding-left: 24px;
     }
 
-    #header-searchfield-icon {
+    #searchfield-icon {
         position: absolute;
         top: 8px;
         right: 12px;
         width: 24px;
     }
 
+    mat-chip-row {
+        .mat-chip-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 8px;
 
+            .inputAvatar {
+                width: 28px;
+                height: 25px;
+                border-radius: 15px;
+            }
+        }
+
+
+    }
 }
 
-.inputAvatar {
-    width: 28px;
-    height: 25px;
-    border-radius: 15px;
+/*
+searchbar setups: header, channelOption
+*/
+
+.header {}
+
+
+.channelOption {
+    border: solid 1px #ADB0D9;
+    border-radius: 30px;
+    padding: 8px
 }
 
-::ng-deep .mdc-list-item__primary-text{
+
+
+
+
+::ng-deep .mdc-list-item__primary-text {
     display: flex;
     align-items: center;
     gap: 8px;
 
-    .user-img{
+    .user-img {
         height: 24px;
         aspect-ratio: 1;
     }
 }
 
 
-::ng-deep .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above) div.mat-mdc-autocomplete-panel{
+::ng-deep .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above) div.mat-mdc-autocomplete-panel {
     border-top-right-radius: 8px !important;
     border-top-left-radius: 8px !important;
     border-radius: 8px;
@@ -47,7 +72,7 @@
 
 @media only screen and (max-width: 768px) {
     #header-searchfield-container {
-        #header-searchfield { 
+        #header-searchfield {
             border: 1px solid #ADB0D9;
         }
     }
