updating creating a message
updating creating a message

--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
@@ -17,7 +17,7 @@
     
 
 <div class="addUserToSelectionContainer">
-<button class="addUserToSelection">Erstellen</button>
+<button (click)="createChannel()" class="addUserToSelection">Erstellen</button>
 </div>
 
 </div>
