--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -91,9 +91,9 @@
         </div>
         -->
 
-        <!--
-            <button (click)="$event.stopPropagation(); addUserToChannel($event)" class="addSelection">Hinzufügen</button>
-        -->
+        
+            <button (click)="$event.stopPropagation(); saveUserChanges()" class="addSelection">Hinzufügen</button>
+        
     </mat-menu>
 
     <div class="chat-container">
