--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -91,6 +91,16 @@ $headerDropdownPositionRigth: 0px;
     }
 }
 
+#userProfileMenuBackground{
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    top: 0px;
+    left: 0px;
+    z-index: 4;
+}
+
 #headerUserProfil {
     padding: 24px;
     min-width: 100px;
