--- a/src/app/add-channel-dialog/add-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-channel-dialog.component.html
@@ -1,61 +1,34 @@
 <form class="addChannelDialogContainer" [formGroup]="addChannelForm"
     (ngSubmit)="onSubmitNewChannel(addChannelForm.value)">
-    
 
+    <div id="addChannelDialogHeader">
         <h1>Channel erstellen</h1>
+        <img src="/assets/img/icons/close.svg" alt="close">
+    </div>
 
-        <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein #marketing zum
-            Beispiel.
-        </p>
-       
-        <div class="channelNameContainer">
-            <h2>Channel-Name</h2>
-            <input class="channelNameInput newChannelInputField" formControlName="channelName" palceholder="# z.B. Kooperationsprojekte" required>
-            <p  *ngIf="addChannelForm.controls['channelName'].invalid && (addChannelForm.controls['channelName'].dirty || addChannelForm.controls['channelName'].touched)"
+    <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein #marketing zum
+        Beispiel.
+    </p>
+
+    <div class="channelNameContainer">
+        <h2>Channel-Name</h2>
+        <input class="channelNameInput newChannelInputField" formControlName="channelName"
+            palceholder="# z.B. Kooperationsprojekte" required>
+        <p *ngIf="addChannelForm.controls['channelName'].invalid && (addChannelForm.controls['channelName'].dirty || addChannelForm.controls['channelName'].touched)"
             class="errorValidation">
             Channelname muss mindesten 3 Zeichen lang sein!
         </p>
-        </div>
+    </div>
 
-
-        <div class="channelDescriptionContainer">
-            <h2>Beschreibung</h2>
-            <input class="channelDescriptionInput newChannelInputField" formControlName="channelDescription" palceholder="# z.B. Kooperationsprojekte" required>
-            <p  *ngIf="addChannelForm.controls['channelDescription'].invalid && (addChannelForm.controls['channelDescription'].dirty || addChannelForm.controls['channelDescription'].touched)"
-                class="errorValidation">
-                Bitte geben Sie eine Beschreibung ein!
-            </p>
-        </div>
-
-   <!--  <mat-form-field class="formFieldChannelName removeBackground">
-        <div class="channelNameContainer">
-            <h2>Channel-Name</h2>
-            <input matInput class="channelNameInput" formControlName="channelName" palceholder="# z.B. Kooperationsprojekte" required>
-        </div>
-
-        <mat-error class="materror1" *ngFor="let validation of validation_messages.channelName">
-            <mat-error class="error-message"
-                *ngIf="addChannelForm.get('channelName')?.hasError(validation.type) && (addChannelForm.get('channelName')?.dirty || addChannelForm.get('channelName')?.touched)">
-                {{validation.message}}
-            </mat-error>
-        </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="formFieldChannelDescription">
-
-        <div class="channelDescriptionContainer">
-            <h2>Beschreibung</h2>
-            <input matInput class="channelDescriptionInput" formControlName="channelDescription" palceholder="# z.B. Kooperationsprojekte" required>
-        </div>
-
-        <mat-error *ngFor="let validation of validation_messages.channelDescription">
-            <mat-error class="error-message"
-                *ngIf="addChannelForm.get('channelDescription')?.hasError(validation.type) && (addChannelForm.get('channelDescription')?.dirty || addChannelForm.get('channelDescription')?.touched)">
-                {{validation.message}}
-            </mat-error>
-        </mat-error>
-    </mat-form-field> -->
-
+    <div class="channelDescriptionContainer">
+        <h2>Beschreibung</h2>
+        <input class="channelDescriptionInput newChannelInputField" formControlName="channelDescription"
+            palceholder="# z.B. Kooperationsprojekte" required>
+        <p *ngIf="addChannelForm.controls['channelDescription'].invalid && (addChannelForm.controls['channelDescription'].dirty || addChannelForm.controls['channelDescription'].touched)"
+            class="errorValidation">
+            Bitte geben Sie eine Beschreibung ein!
+        </p>
+    </div>
 
     <button class="createChannelButton" type="submit" [disabled]="!addChannelForm.valid">
         Erstellen
