--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -1,15 +1,14 @@
 .message-container {
-    width: calc(100% - 70px);
+    width: calc(100% - 90px);
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
     position: relative;
-    padding: 0 35px 0 35px;
+    padding: 0 45px 0 45px;
 
     .message-img {
         width: 70px;
         height: 70px;
-        padding: 10px;
         border-radius: 50%;
         object-fit: cover;
     }
@@ -19,16 +18,20 @@
         display: flex;
         align-items: flex-start;
         flex-direction: column;
+        padding: 0px 30px;
 
         .message-head {
             display: flex;
             flex-direction: row;
-            gap: 16px;
+            gap: 20px;
             margin: 5px;
+            align-items: center;
 
             div {
                 width: fit-content;
                 .message-username{
+                    font-size: 18px;
+                    font-weight: 700;
                     &:hover{
                         cursor: pointer;
                         color: #797EF3;
@@ -36,6 +39,11 @@
                 }
             }
 
+        }
+
+        .message-timestamp{
+            font-size: 14px;
+            color: rgba(104, 104, 104, 1);
         }
 
         mat-card {
@@ -48,7 +56,9 @@
                 font-weight: 400;
                 line-height: 24.55px;
                 padding: 20px;
-                white-space: pre-wrap;
+                width: auto;
+                display: flex;
+                word-break: break-word;
             }
 
             app-toolbar {
