--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -8,7 +8,7 @@
 
     .header {
         box-shadow: rgba(0, 0, 0, 0.8) 0 2px 23px -10px;
-        padding: 8px 35px 8px 35px;
+        padding: 25px 45px;
         border-radius: 30px 30px 0 0;
         display: flex;
         justify-content: space-between;
@@ -16,15 +16,15 @@
         .header-title {
             display: flex;
             align-items: center;
+            font-size: 24px;
         }
 
         .user-avatar-list {
             display: flex;
             align-items: center;
-
             padding: 11px;
             border-radius: 30px;
-            margin-right: 22px;
+            margin-right: 10px;
 
             &:hover {
                 background-color: #ECEEFE;
@@ -37,6 +37,7 @@
     .amoundOfUsersInChannel {
         font-size: 20px;
         padding-left: 10px;
+        font-weight: 600;
     }
 
     .chat-container {
@@ -99,6 +100,7 @@
     height: 40px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .header {
@@ -114,6 +116,7 @@
         .header-title-container {
             display: flex;
             padding: 4px 12px 4px 12px;
+            align-items: center;
 
             h2 {
                 margin: 0px;
@@ -127,6 +130,7 @@
                 color: #535AF1;
                 background-color: #ECEEFE;
                 border-radius: 37px;
+                cursor: pointer;
             }
         }
     }
