--- a/src/app/mainscreen/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/searchbar/searchbar.component.scss
@@ -1,20 +1,24 @@
 #searchfield-container {
     position: relative;
+    max-width: 960px;
+    display: flex;
 
     #searchfield {
-        flex-grow: 1;
-        width: calc(100% - 24px);
+        /* flex-grow: 1; */
+        /* width: calc(100% - 24px); */
         border-radius: 42px;
         height: 40px;
         border: 0px;
-        padding-left: 24px;
+        padding: 17.5px 45px;
+        display: flex;
+        font-size: 24px;
     }
 
     #searchfield-icon {
         position: absolute;
-        top: 8px;
-        right: 12px;
-        width: 24px;
+        top: 20px;
+        right: 18px;
+        width: 35px;
     }
 
     mat-chip-row {
