--- a/src/app/mainscreen/sidenav/sidenav.component.scss
+++ b/src/app/mainscreen/sidenav/sidenav.component.scss
@@ -1,7 +1,8 @@
 #sidenav {
     height: 100%;
     overflow-y: scroll;
-    padding: 24px;
+    padding: 32px 30px;
+    min-width: 366px;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -13,7 +14,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 27px;
+
+    h3{
+        font-size: 24px;
+        font-weight: 700;
+    }
 }
 
 .editSquare {
@@ -92,7 +97,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap:6px; 
+    gap:6px;
+    word-break: break-word;
 
     .myChannels-channel{
 
