--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
@@ -1,5 +1,5 @@
 #edit-channel{
-    min-width: 600px;
+    max-width: 600px;
     min-height: 300px;
     background-color: white;
     border-radius: 0px 30px 30px 30px; 
@@ -12,6 +12,7 @@
     gap:18px; 
     display: flex;
     flex-direction: column;
+    word-break: break-all;
 
     #edit-channel-header{
         display: flex;
@@ -204,6 +205,15 @@
     }
     #edit-channel-leaveChannel{
         margin: 0px 12px 0px 12px;
+    }
+
+
+    #goToText {
+        display: block;
+    }
+
+    #searchfield {
+        display: none;
     }
 }
    
