Added Empty Side Interface

--- a/src/app/mainscreen/mainscreen.component.scss
+++ b/src/app/mainscreen/mainscreen.component.scss
@@ -1,7 +1,7 @@
 $sideNav-width: 366px;
 $thread-width: 600px;
 
-app-channel, app-chat {
+app-channel, app-chat, app-empty-window {
     flex-grow: 1;
 }
 
