--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -16,15 +16,21 @@
     </app-header>
     <div id="main-body" *ngIf="windowWidth > 768">
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
-        <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView; else channelView">
-        </ng-container>
+
+
+        <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView"></ng-container>
+        <ng-container *ngIf="channelFirebaseService.selectedChannel; then channelView"></ng-container>
+        <ng-container *ngIf="!channelFirebaseService.selectedChannel && !chatFirebaseService.selectedChat; then emptyView"></ng-container>
 
         <ng-template #chatView>
-            <app-chat *ngIf="chatFirebaseService.selectedChatId" id="main-chat"></app-chat>
+            <app-chat id="main-chat"></app-chat>
         </ng-template>
         <ng-template #channelView>
-            <app-channel *ngIf="channelFirebaseService.selectedChannelId" id="main-channel"></app-channel>
+            <app-channel id="main-channel"></app-channel>
             <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
+        </ng-template>
+        <ng-template #emptyView>
+            <app-empty-window></app-empty-window>
         </ng-template>
     </div>
 
