working on addusertochannel and style
working on addusertochannel and style

--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.html
@@ -2,7 +2,7 @@
 
     <div class="headerContainer">
         <h3 class="headerText">Leute hinzufügen</h3>
-        <img  class="close"  src="/assets/img/icons/close.svg">
+        <img (click)="closeDialog()"  class="close"  src="/assets/img/icons/close.svg">
     </div>
 
     <mat-radio-group class="radioButtonContainer" [(ngModel)]="selectedOption" (ngModelChange)="chooseSelection()">
