--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -14,7 +14,8 @@
         <div class="addMemberContainer">
             <div class="user-avatar-list" tabindex="0" mat-icon-button [matMenuTriggerFor]="menu"
                 #menuTrigger="matMenuTrigger" aria-label="Example icon-button with a menu">
-                <img class="avatar-img" *ngFor="let user of channelFirebaseService.userOnCurrentChannel | slice:0:3; let i = index"
+                <img class="avatar-img"
+                    *ngFor="let user of channelFirebaseService.userOnCurrentChannel | slice:0:3; let i = index"
                     [style.left]="i * -10 + 'px'" [style.z-index]="3 - i" [src]="user.avatar" alt="avatar">
 
                 <span class="amoundOfUsersInChannel">{{channelFirebaseService.userOnCurrentChannel.length}}</span>
@@ -35,21 +36,26 @@
             <img class="close" (click)="closeMenus()" src="/assets/img/icons/close.svg">
         </div>
 
-        <div class="menuUsersContainer" (click)="$event.stopPropagation()">
-            <div class="menuUsers" (click)="openProfil(user)" *ngFor="let user of channelFirebaseService.userOnCurrentChannel">
-                <img class="menuUsersImage" src="{{ user.avatar }}">
-                <span class="menuUsersName">{{user.fullName}}</span>
+        <div class="menuUserWrapper">
+            <div class="menuUsersContainer" (click)="$event.stopPropagation()">
+                <div class="menuUsers" (click)="openProfil(user)"
+                    *ngFor="let user of channelFirebaseService.userOnCurrentChannel">
+                    <img class="menuUsersImage" src="{{ user.avatar }}">
+                    <span class="menuUsersName">{{user.fullName}}</span>
+                </div>
+            </div>
+
+            <div class="addMemberInMenu" (click)="$event.stopPropagation()">
+                <img class="addMemberImage" src="assets/img/icons/addmembers.svg">
+                <span class="addMemberText" (click)="openAddMemberMenu()">Teilnehmer hinzufügen</span>
             </div>
         </div>
-
-        <div class="addMemberInMenu" (click)="$event.stopPropagation()">
-            <img class="addMemberImage" src="assets/img/icons/addmembers.svg">
-            <span class="addMemberText" (click)="openAddMemberMenu()">Teilnehmer hinzufügen</span>
-        </div>
-
     </mat-menu>
 
-    <mat-menu #addMember="matMenu" (click)="$event.stopPropagation()">
+
+
+    <mat-menu class="channel-specific" #addMember="matMenu" (click)="$event.stopPropagation()">
+
         <div class="menuHeader" (click)="$event.stopPropagation()">
             <h3 class="headerText">Leute hinzufügen</h3>
             <img class="closeMenu" (click)="closeMenus()" src="/assets/img/icons/close.svg">
@@ -92,9 +98,7 @@
         </div>
         -->
 
-        
-            <button (click)="$event.stopPropagation(); saveUserChanges()" class="addSelection">Hinzufügen</button>
-        
+        <button (click)="$event.stopPropagation(); saveUserChanges()" class="addSelection">Hinzufügen</button>
     </mat-menu>
 
     <div class="chat-container">
@@ -121,7 +125,8 @@
                     <h3># {{ channelFirebaseService.selectedChannel.channelName }}</h3>
                 </div>
                 <div class="channel-text">
-                   Das ist der Anfang des Channels <a href="#"># {{ channelFirebaseService.selectedChannel.channelName }}</a>
+                    Das ist der Anfang des Channels <a href="#"># {{ channelFirebaseService.selectedChannel.channelName
+                        }}</a>
                 </div>
             </div>
         </ng-template>
