--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
@@ -1,5 +1,6 @@
 #edit-channel{
-    max-width: 600px;
+    max-width: 800px;
+    min-width: 400px;
     min-height: 300px;
     background-color: white;
     border-radius: 0px 30px 30px 30px; 
