--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -17,10 +17,9 @@
     <div id="main-body" *ngIf="windowWidth > 768">
         <app-sidenav *ngIf="sideNavOpen" id="main-sidebar"></app-sidenav>
 
-
-        <ng-container *ngIf="chatFirebaseService.selectedChat; then chatView"></ng-container>
-        <ng-container *ngIf="channelFirebaseService.selectedChannel; then channelView"></ng-container>
-        <ng-container *ngIf="!channelFirebaseService.selectedChannel && !chatFirebaseService.selectedChat; then emptyView"></ng-container>
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === 'Chat'; then chatView"></ng-container>
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === 'Channel'; then channelView"></ng-container>
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === ''; then emptyView"></ng-container>
 
         <ng-template #chatView>
             <app-chat id="main-chat"></app-chat>
@@ -34,7 +33,7 @@
         </ng-template>
     </div>
 
-    
+    <!-- OLD MOBILE
     <div id="main-body-mobile" *ngIf="windowWidth <= 768">
         <app-sidenav *ngIf="channelFirebaseService.selectedChannelId == undefined && chatFirebaseService.selectedChatId == undefined" 
             id="main-sidebar">
@@ -52,6 +51,30 @@
             <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
         </ng-template>
     </div>
+    -->
+
+    <!-- NEW MOBILE -->
+    <div id="main-body-mobile" *ngIf="windowWidth <= 768">
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === 'Chat'; then chatView"></ng-container>
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === 'Channel'; then channelView"></ng-container>
+        <ng-container *ngIf="activeSelectionService.getActiveSelectionType() === ''; then emptyView"></ng-container>
+
+        <ng-template #chatView>
+            <app-chat id="main-chat"></app-chat>
+        </ng-template>
+
+        <ng-template #channelView>
+            <app-channel id="main-channel"></app-channel>
+            <app-thread id="main-thread" *ngIf="threadFirebaseService.message"></app-thread>
+        </ng-template>
+
+        <ng-template #emptyView>
+            <app-sidenav *ngIf="channelFirebaseService.selectedChannelId == undefined && chatFirebaseService.selectedChatId == undefined" 
+            id="main-sidebar">
+            </app-sidenav>
+        </ng-template>
+    </div>
+   
     
 </div>
 
