responsive Design (header/sidenav/searchbar)

--- a/src/app/mainscreen/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/searchbar/searchbar.component.html
@@ -32,5 +32,5 @@
     </mat-option>
   </mat-autocomplete>
 
-  <img id="searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" *ngIf="styleType=='header'">
+  <img id="searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" *ngIf="styleType=='header' ||  styleType=='sideNavMobile'">
 </div>
