--- a/src/app/mainscreen/header/header.component.scss
+++ b/src/app/mainscreen/header/header.component.scss
@@ -258,47 +258,32 @@ $headerDropdownPositionRigth: 0px;
          
         }
     }
+}
 
-    /*
-    #headerMenu-mobile{
-        display: block;
-    }
-
-    #header-image-container{
-        display: none !important;
-    }
-    
+@media only screen and (max-width: 700px) {
     #header-image-container-mobile{
-        display: block;
+        img{
+            max-width: 180px;
+            max-height: 100px;
+        }
+    }
+}
+@media only screen and (max-width: 350px) {
+    #header-image-container-mobile{
         #header-image-container-mobile-selected{
             display: flex;
             gap:12px; 
+            align-items: center;
         }
-    }
-    */
-}
-
-
-
-/*
-@media only screen and (max-width: 700px) {
-    #header-container{      
-        #header-user-name , #headerDropdown {
-            display: none;
+        img{
+            max-width: 100px;
+            max-height: 30px;
         }
-        #header-user {
-            min-width: unset;
-        }
-        #header-image-container{
-            min-width: unset;
-            img{
-                width: 200px; 
-            }
+        h3{
+            font-size: 18px;
         }
     }
   
 }
-
-*/
 
 
