--- a/src/app/mainscreen/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/searchbar/searchbar.component.scss
@@ -45,6 +45,26 @@ searchbar setups: header, channelOption
 .header {}
 
 
+.sideNavMobile {
+
+    .testcontainer {
+        display: flex;
+        width: 100%;
+
+        #searchfield {
+            border: 1px solid #ADB0D9 !important;
+            padding: 0px 12px !important;
+            font-size: 18px !important;
+            width: calc(100% - 48px) !important;
+        }
+        
+    }
+    #searchfield-icon {
+        top: 12px !important;
+        width: 24px !important;
+    }
+}
+
 .channelOption {
     border: solid 1px #ADB0D9;
     border-radius: 30px;
@@ -147,19 +167,19 @@ searchbar setups: header, channelOption
         flex-direction: column;
     }
 
-    .mat-mdc-chip-set .mdc-evolution-chip-set__chips  {
+    .mat-mdc-chip-set .mdc-evolution-chip-set__chips {
         display: flex;
         flex-direction: column;
     }
 
 }
 
-mat-mdc-chip-set .mdc-evolution-chip-set__chips  {
+mat-mdc-chip-set .mdc-evolution-chip-set__chips {
     display: flex;
     flex-direction: column;
 }
 
-mat-mdc-chip-set .mdc-evolution-chip-set__chips  {
+mat-mdc-chip-set .mdc-evolution-chip-set__chips {
     display: flex;
     flex-direction: column;
 }
