--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -203,7 +203,9 @@ app-message-create {
 .menuUsersContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start}
+    align-items: flex-start; 
+    width: 100%;
+}
 
 .menuUsers {
     display: flex;
@@ -406,6 +408,25 @@ app-message-create {
 }
 
 
+.searchBar {
+    width: 76%;
+    border: solid 1px #ADB0D9;
+    border-radius: 27px;
+}
+
+.testForMat {
+    width: 100%;
+}
+
+.menuUserWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 48px;
+}
+
+
+
 @media only screen and (max-width: 1000px) {
 
     .header{
@@ -429,22 +450,5 @@ app-message-create {
         }
     }
 
-}
-
-.searchBar {
-    width: 76%;
-    border: solid 1px #ADB0D9;
-    border-radius: 27px;
-}
-
-.testForMat {
-    width: 100%;
-}
-
-.menuUserWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 29%;
 }
 
