--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -62,6 +62,12 @@
             id="main-sidebar">
             </app-sidenav>
         </ng-template>
+
+        <div id="new-message-mobile">
+            <button mat-fab color="primary" aria-label="new message">
+                <mat-icon>edit_square</mat-icon>
+            </button>
+        </div>
     </div>
    
     
