--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.scss
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.scss
@@ -73,3 +73,18 @@ add-user-to-channel-dialog-container {
     justify-content: flex-end;
     padding-top: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+
+    .addUserToChannelContainer{
+        width: 100vw;
+        height: fit-content;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        background-color: white;
+        border-radius: 30px 30px 0px 0px;       
+        padding-bottom: 48px;
+    }
+
+}
