--- a/src/app/mainscreen/searchbar/searchbar.component.html
+++ b/src/app/mainscreen/searchbar/searchbar.component.html
@@ -1,6 +1,10 @@
-<div  id="searchfield-container" [ngClass]="styleType" *ngIf="options">
+<div id="searchfield-container" [ngClass]="styleType" *ngIf="options">
 
-  <div class="testcontainer">
+
+
+  <input #searchField id="searchfield" type="text" placeholder="Code learning durchsuchen" [matAutocomplete]="auto"
+    [matChipInputFor]="chipGrid" [formControl]="headerControl" matInput>
+
   <mat-chip-grid #chipGrid class="chip">
     <mat-chip-row (removed)="remove(user)" *ngFor="let user of editableChannelUsers; let i = index">
       <div class="mat-chip-content">
@@ -12,10 +16,6 @@
       </div>
     </mat-chip-row>
   </mat-chip-grid>
-
-  <input #searchField id="searchfield" type="text" placeholder="Code learning durchsuchen" [matAutocomplete]="auto"
-    [matChipInputFor]="chipGrid" [formControl]="headerControl" matInput>
-</div>
 
   <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="add($event.option.value)">
     <mat-option *ngFor="let option of filteredOptions$ | async" [value]="option">
@@ -32,5 +32,6 @@
     </mat-option>
   </mat-autocomplete>
 
-  <img id="searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search" *ngIf="styleType=='header' ||  styleType=='sideNavMobile'">
+  <img id="searchfield-icon" src="/assets/img/icons/search_gray.svg" alt="search"
+    *ngIf="styleType=='header' ||  styleType=='sideNavMobile'">
 </div>
