--- a/src/app/mainscreen/channel/channel.component.scss
+++ b/src/app/mainscreen/channel/channel.component.scss
@@ -5,7 +5,6 @@
     justify-content: flex-end;
     flex-direction: column;
     border-radius: 30px;
-   
 
     .header {
         box-shadow: rgba(0, 0, 0, 0.8) 0 2px 23px -10px;
@@ -31,7 +30,6 @@
                 background-color: #ECEEFE;
                 cursor: pointer;
             }
-
         }
     }
 
@@ -205,6 +203,7 @@ app-message-create {
     flex-direction: column;
     align-items: flex-start; 
     width: 100%;
+    font-family: 'Nunito', sans-serif;
 }
 
 .menuUsers {
