--- a/src/app/mainscreen/channel/show-channel-users/show-channel-users.component.scss
+++ b/src/app/mainscreen/channel/show-channel-users/show-channel-users.component.scss
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: column;
     word-break: break-all;
+    max-height: 70vh;
+    overflow: scroll;
 
     #showChannelHeader{
         display: flex;
