hide new chat icon (mobile)

--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -63,7 +63,7 @@
             </app-sidenav>
         </ng-template>
 
-        <div id="new-message-mobile">
+        <div id="new-message-mobile"  *ngIf="activeSelectionService.getActiveSelectionType() === ''">
             <button mat-fab color="primary" aria-label="new message">
                 <mat-icon>edit_square</mat-icon>
             </button>
